--- a/arescrypt/arescrypt.csproj
+++ b/arescrypt/arescrypt.csproj
@@ -45,13 +45,13 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Configuration.cs" />
+    <Compile Include="Cryptography.cs" />
     <Compile Include="Display.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="Display.Designer.cs">
       <DependentUpon>Display.cs</DependentUpon>
     </Compile>
-    <Compile Include="Encryption.cs" />
     <Compile Include="FileHandler.cs" />
     <Compile Include="Misc.cs" />
     <Compile Include="Program.cs" />
