--- a/arescrypt/arescrypt.csproj
+++ b/arescrypt/arescrypt.csproj
@@ -62,7 +62,7 @@
       <DependentUpon>Display.cs</DependentUpon>
     </Compile>
     <Compile Include="FileHandler.cs" />
-    <Compile Include="Misc.cs" />
+    <Compile Include="Miscellaneous.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
