--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 language: csharp
 solution: arescrypt.sln
 install:
+ - nuget
+ - nuget restore arescrypt.sln -Verbosity detailed
+ - nuget update arescrypt.sln -Verbosity detailed
  - nuget install Costura.Fody
  - nuget install Newtonsoft.Json
