deleted build.sh and put contents into travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,5 @@ install:
  - nuget update arescrypt.sln -Verbosity detailed
  - nuget install Costura.Fody
  - nuget install Newtonsoft.Json
-script: ./build.sh
+script:
+ - xbuild /t:Build /p:Configuration=Release arescrypt.sln
